// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageDetails renders 1`] = `
<Screen
  navBarColor="#fff"
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Options",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/kabob.png",
        },
        "testID": "pages.details.editButton",
      },
    ]
  }
  showDismissButton={true}
  statusBarStyle="default"
  subtitle="Course 1"
  title="Page Details"
>
  <RefreshableScrollView
    onRefresh={[Function]}
    refreshing={false}
    style={
      Object {
        "flex": 1,
        "padding": 16,
      }
    }
  >
    <Heading1
      style={
        Object {
          "paddingBottom": 17,
        }
      }
    >
      Page 1
    </Heading1>
    <CanvasWebView
      automaticallySetHeight={true}
      navigator={
        Object {
          "dismiss": [Function],
          "dismissAllModals": [Function],
          "isModal": false,
          "pop": [Function],
          "show": [Function],
          "traitCollection": [Function],
        }
      }
      scrollEnabled={true}
      source={
        Object {
          "baseURL": "/pages/page-1#jumpto",
          "html": "<p>Hello, World!</p>",
        }
      }
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </RefreshableScrollView>
</Screen>
`;

exports[`PageDetails renders while loading 1`] = `
<Screen
  navBarColor="#fff"
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Options",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/kabob.png",
        },
        "testID": "pages.details.editButton",
      },
    ]
  }
  showDismissButton={true}
  statusBarStyle="default"
  title="Page Details"
>
  <RefreshableScrollView
    onRefresh={[Function]}
    refreshing={true}
    style={
      Object {
        "flex": 1,
        "padding": 16,
      }
    }
  >
    <Heading1
      style={
        Object {
          "paddingBottom": 17,
        }
      }
    />
    <CanvasWebView
      automaticallySetHeight={true}
      navigator={
        Object {
          "dismiss": [Function],
          "dismissAllModals": [Function],
          "isModal": false,
          "pop": [Function],
          "show": [Function],
          "traitCollection": [Function],
        }
      }
      scrollEnabled={true}
      source={
        Object {
          "baseURL": "",
          "html": "",
        }
      }
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </RefreshableScrollView>
</Screen>
`;
